tests/NormalTests/paczka1/small_fuzzy/33437816.err
Error in line 3: BJiQXMitVC S109 22,25
Error in line 4: ode S475 23,7
Error in line 5: ode S721 13,7
Error in line 16: ode S109 54,62
